tests/NormalTests/paczka1/fuzzy1/68784901.err
Error in line 6: zp3HmQ A433 33,7
Error in line 9: XoiUdVYpxcn A433 73,1
Error in line 11: zp3HmQ S620 27,4
Error in line 18: zp3HmQ A433 44,2
Error in line 2: S620 A585 21,6
Error in line 22: edhTv A941 86,4
Error in line 31: edhTv S620 97,6
Error in line 39: edhTv S620 57,18
